# phase2

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build-rules.mk  pyproject.toml
.github/workflows/: CI.yml
algos/: linen.c  rayon.c  silk.c
backend/paulirot/: .gitignore  LICENSE  README.md
backend/paulirot/test/: CMakeLists.txt  test_paulis.c  test_qreg.c
bench/: Makefile  b-algos.c  b-circ.c  b-log.c  b-paulis.c  b-prob.c  b-qreg.c  b-state-prep-coeff.c  bench.c  bench.h
circ/: CMakeLists.txt  Makefile  capi.c  circ.c  circ_intl.h  circ_private.h  cmpsit.c  hamil.c  internal.h  ops.c  qdrift.c  trott.c  trott2.c
circ/algos/: rayon.c
circ/include/: capi.h  circ.h  data.h
circ/include/algos/: rayon.h
cli/: datio.c  log.c  log.h  main.c  opt.c  run.c
dat/: FCIDUMP_H2_10  FCIDUMP_H2_12  FCIDUMP_H2_2  FCIDUMP_H2_6  simul_H2_2.h5  simul_H2_2.h5.orig
dat/H2O/: H2O_01_generate_hamiltonian.py  H2O_02_generate_times.py  H2O_03_analyze_results.py  H2O_CAS56.FCI_DUMP
dat/case-rand/: case-025afa77.json  case-070d034c.h5  case-070d034c.json  case-0a66ae1d.json  case-1b3a75d5.h5  case-1b3a75d5.json  case-23d7cd5d.json  case-26bcd92a.h5  case-28aa2595.h5  case-28aa2595.h5_solved  case-2ad48b96.h5  case-33427110.h5_solved  case-3816a89c.json  case-63706bf1.h5  case-63706bf1.json  case-6669b85f.h5  case-6669b85f.json  case-67c0f535.json  (+26 more)
data/: CMakeLists.txt  data.c
data/H2O/: H2O_setup.py
data2/: data2.c
doc/: logging.md  ph2.md  phase2.md  python.md  simul-h5-specs.md  state-prep.md  testing.md
examples/: README.md  TUTORIAL.md  pauli_rotation.py
include/: bug.h  c23_compat.h  circ.h  combinations.h  container_of.h  data.h  data2.h  det_small.h  jsmn.h  log.h  paulis.h  phase2.h  prob.h  qreg.h  types.h  world.h  xoshiro256ss.h
lib/: Makefile  combinations.c  det_small.c  log.c  prob.c
ph2run/: CMakeLists.txt  Makefile  argums.c  circ.c  circ_qdrift.c  circ_trott.c  data.c  datio.c  log.c  log.h  main.c  opt.c  opt.h  paulis.c  ph2run-cmpsit.c  ph2run-qdrift.c  ph2run-trott.c  ph2run.c  ph2run.h  qreg.c  run.c  world.c  xoshiro256ss.c
phase2/: CMakeLists.txt  Makefile  c23_compat.h  capi.c  circ.c  circ.h  circ_cache.c  circ_cache.h  circ_intl.h  circ_qdrift.c  circ_trott.c  combinations.c  data.c  det_small.c  paulis.c  phase2_run.c  prob.c  qreg.c  qreg.h  qreg_QuEST.c  qreg_cuQuantum.c  qreg_cuQuantum.cu  qreg_cuQuantum.h  qreg_cuda.c  qreg_cuda.cu  qreg_cuda.h  qreg_cuda_lo.cu  qreg_qreg.c  qreg_quest.c  state_prep_coeff.c  world.c  world_QuEST.c  world_QuEST.h  world_cuQuantum.c  world_cuQuantum.h  world_cuda.c  world_cuda.h  world_impl.h  world_log.c  world_quest.c  (+1 more)
phase2/algos/: linen.c  rayon.c
phase2/include/: circ.h
phase2/include/algos/: linen.h  rayon.h
python/: LICENSE  README.md  pyproject.toml
python/notebook/: h2_validate.ipynb  h2_validate.py
python/phase2/: __init__.py  generate_multidet.py  generate_random_hamil_testcase.py  generate_times.py  parse_fcidump.py
python/scripts/: h2_validate.py  plot_csv.py
rust/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
scripts/: gen_multidet.py  gen_rand_testcase.py  gen_times.py  h2_validate.py  h2o_trotter_validate.py  parse_fcidump.py  parse_hchain.py  parse_inputst.py  qdrift_rpe.py  qdrift_sample.py  trott_fft.py  trott_prep.py  trott_rpe.py  trotter_prep.py  trotter_validate.py
simul/: Makefile  README.md
simul_data/: F6.FCIDUMP
src/: CMakeLists.txt  circ.c  circ.h  circ_qdrift.c  circ_qdrift.h  circ_trott.c  circ_trott.h  circ_trotter.c  circ_trotter.h  common.h  data.c  data.h  data2.c  data2.h  h5.c  h5.h  linen.c  linen.h  log.c  log.h  logger.c  logger.h  main.c  main_qdrift.c  main_trott.c  main_trotter.c  ph2run.c  ph2run.h  phase2.c  qreg.c  qreg.h  rayon.c  rayon.h  run.c  sdat.c  sdat.h  simul.c  simulh5.c  simulh5.h  xoshiro256ss.c  (+3 more)
src/circ/: linen.c
src/log/: CMakeLists.txt  log.c  log.h
src/ph2run/: CMakeLists.txt  argums.h  main.c  run.c
src/ph2run/log/: README.md  log.c  log.h
src/phase2/: CMakeLists.txt  circ.c  circ.h  data.c  data.h  linen.c  linen.h  rayon.c  rayon.h  sdat.c
src/phase2/algos/: linen.h  rayon.c  rayon.h
src/phase2/circ/: linen.c  linen.h  rayon.c  rayon.h
test/: CMakeLists.txt  Makefile  check-docs.sh  run-mpi-scaling.sh  run.c  t-bench.c  t-bitstring_index.c  t-circ.c  t-circ_cache  t-circ_cache.c  t-circ_prepst_coeff.c  t-circ_trott.c  t-circ_trott2.c  t-circ_trott2_coeff.c  t-circ_trott_coeff.c  t-cmpsit.c  t-combinations.c  t-data.h  t-data_attr.c  t-data_coeff_matrix.c  t-data_dets_validate.c  t-data_hamil.c  t-data_hamil_validate.c  t-data_idempotence.c  t-data_mpi.c  t-data_multidet.c  t-data_open.c  t-data_trott_steps.c  t-det_small.c  t-log.c  t-log_release.c  t-paulis.c  t-prob.c  t-qdrift.c  t-qreg.c  t-ref-bendazzoli.c  t-ref-coeff_matrix.py  t-ref-psi_json.py  t-run.c  t-state_prep_coeff_csf.c  (+23 more)
test/_test-deprecated/: mock_circ.h  test_circ.c
test/circ/: main.c
test/data/: H2O_CAS56.h5  N4_both.h5  N4_closed.h5  N4_csf.h5  N4_csf_empty.h5  N4_multidet.h5  N4_open.h5  N8_tapered.h5  N8_untapered.h5  build_coeff_fixtures.py  case-d9f603dc.h5_solved  test-data_hamil.c  test-data_multidet.c  test-data_open.c  test-data_trott_steps.c  test-data_trotter_steps.c  test_data_hamil.c  test_data_multidet.c  test_data_open.c  test_data_times.c  test_data_times_write.c  test_data_trotter_steps.c
test/data/bendazzoli/n4_oss_k0/: n4_oss_k0.h5  n4_oss_k0_expected.txt
test/ref/: coeff_matrix_reference.py  psi_json_reference.py
test/run-fixtures/: abort.c  banner.c  fail.c  pass.c  sleep.c
test/test-deprecated/: CMakeLists.txt  mock_circ.c
test/trott_caserand/: case-00358789.h5  case-04ba000b.h5_solved  case-19f7187e.h5  case-19f7187e.h5_solved  case-2779488a.h5_solved  case-39a48d76.h5_solved  case-6171a3c8.h5  case-6171a3c8.h5_solved  case-caf81b88.h5  case-cf50c04b.h5_solved  case-e502d0bb.h5  case-f2a421c7.h5  case-f2a421c7.h5_solved  case-fb20d1f9.h5  case-fb20d1f9.h5_solved
tests/: test_phase2.py
util/: ph2.py
(+222 files in other folders)
