[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phase2"
version = "1.0.0"
description = "Python interface to the phase2 MPI Hamiltonian simulator"
license = "BSD-3-Clause"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["python"]

[project.optional-dependencies]
test = ["pytest>=7"]
