[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phase2"
version = "1.1.0"
description = "Python interface to the phase2 MPI Hamiltonian simulator"
license = "BSD-3-Clause"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["python"]

[project.optional-dependencies]
test = ["pytest>=7"]
# Analysis scripts for the examples/simul pipelines.
examples = ["h5py>=3", "numpy>=1.23", "scipy>=1.10"]
# Input preparation: FCIDUMP -> Jordan-Wigner Pauli Hamiltonian.
# Only needed to regenerate examples/data/hamil.h5 (make regen).
prep = ["h5py>=3", "numpy>=1.23", "qiskit-nature>=0.7", "pyscf>=2.3"]

[tool.pytest.ini_options]
testpaths = ["python/tests", "util/tests"]
